--- a/Funciones_lineales.ipynb
+++ b/Funciones_lineales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUyOHwbtl/2fqYU2z1W/Mm",
+      "authorship_tag": "ABX9TyOKO5/gSz3GSMHbEDdaCFxI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,27 @@
       "metadata": {
         "id": "QpDIRwZfrE48"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Librerías"
+      ],
+      "metadata": {
+        "id": "jNmAcWgcvhoV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "pQT1dVinv6Vg"
+      },
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
