--- a/Funciones_lineales.ipynb
+++ b/Funciones_lineales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKO5/gSz3GSMHbEDdaCFxI",
+      "authorship_tag": "ABX9TyMHCVGScZIgU8tZGbNmuwuQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,12 +53,25 @@
       "metadata": {
         "id": "pQT1dVinv6Vg"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tiene la forma de $$f(x)=mx + b$$ donde $m$ y $b$  $\\in R$.\n",
+        "\n",
+        "$m$ puede ser calculada por: $$m=\\frac{y_{2}-y_{1}}{x_{2}-x_{1}}$$\n",
+        "\n",
+        "y $b$ es el punto de corte con el eje $y$. Su dominio es $Dom_{f} = (-\\infty, \\infty)$. Su imagen es $Im_{f} = (-\\infty, \\infty)$"
+      ],
+      "metadata": {
+        "id": "bEMNnpSBPCZz"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "DOjf43MBq7Km"
       },
